--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,9 @@ services:
       - "3000"
   gridium:
     build: .
+    environment:
+      - S3_ACCESS_KEY_ID=$S3_ACCESS_KEY_ID
+      - S3_SECRET_ACCESS_KEY=$S3_SECRET_ACCESS_KEY
+      - S3_DEFAULT_REGION=$S3_DEFAULT_REGION
+      - S3_ROOT_BUCKET=$S3_ROOT_BUCKET
     command: "tail -f /dev/null"
