All tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Dockerfile-e
 /test/tmp/
 /test/version_tmp/
 /tmp/
+/test_results/
 
 # Used by dotenv library to load environment variables.
 .env
