Never checkin env files

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,10 @@ Dockerfile-e
 /test/tmp/
 /test/version_tmp/
 /tmp/
+/test_results
 
 # Used by dotenv library to load environment variables.
-# .env
+.env
 
 ## Specific to RubyMotion:
 .dat*
