--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,9 @@ services:
       - S3_SECRET_ACCESS_KEY=$S3_SECRET_ACCESS_KEY
       - S3_DEFAULT_REGION=$S3_DEFAULT_REGION
       - S3_ROOT_BUCKET=$S3_ROOT_BUCKET
+      - GRIDIUM_TR_PID=$GRIDIUM_TR_PID
+      - GRIDIUM_TR_PW=$GRIDIUM_TR_PW
+      - GRIDIUM_TR_URL=$GRIDIUM_TR_URL
+      - GRIDIUM_TR_USER=$GRIDIUM_TR_USER
       - BUILD_NUMBER=$BUILD_NUMBER
     command: "tail -f /dev/null"
