Dev mode debug node

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,7 @@
 version: '2'
 services:
+  firefox:
+    image: selenium/node-firefox-debug:3.1.0
   gridium:
     volumes:
       - $GRIDIUMPATH:/gridium
