--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       - "5900"
     depends_on:
       - hub
+    environment:
+      - HUB_PORT_4444_TCP_ADDR=hub
+      - HUB_PORT_4444_TCP_PORT=4444
+      - no_proxy=localhost
+      - HUB_ENV_no_proxy=localhost
   mustadio:
     image: yetanotherlucas/mustadio
     ports:
