--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     image: selenium/hub:3.1.0
     ports:
       - "4444"
+    environment:
+      - GRID_BROWSER_TIMEOUT=30
   chrome:
-    image: selenium/node-chrome:3.1.0
+    image: selenium/node-chrome-debug:3.1.0
     depends_on:
       - hub
     environment:
@@ -13,6 +15,8 @@ services:
       - HUB_PORT_4444_TCP_PORT=4444
       - no_proxy=localhost
       - HUB_ENV_no_proxy=localhost
+    ports:
+      - "5900"
   mustadio:
     image: yetanotherlucas/mustadio
     ports:
