--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
 - docker-compose up -d
 - docker exec $(docker-compose ps -q gridium) bundle install;
 - docker exec $(docker-compose ps -q gridium) rake spec
+before_script:
+- bundle install
 script:
 - rake gridium
 after_script:
